[package]
name = "gtfs"
version = "0.1.0"
authors = ["Tristram Gräbener <tristramg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtfs-structures = "*"
reqwest = "*"
tokio = { version = "0.2", features = ["full"] }
